2017-10-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/misc.c (xs_abort_empty_line): Update to
	match Perl implementation.
	* tp/Texinfo/Parser.pm (import): Re-enable XS overrides.

2017-10-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): Rename reference to spaces 
	element from 'spaces_before_argument' to 'spaces_before_argument_elt'.
	(_abort_empty_line): Replace 'spaces_before_argument_elt' value
	with 'spaces_before_argument', a simple string value.
	(_close_current),
	(_parse_texi) <new line>: Call '_abort_empty_line' to remove 
	spaces element.

	* tp/Texinfo/Convert/Converter.pm
	(_collect_leading_trailing_spaces_arg),
	* tp/Texinfo/Convert/Texinfo.pm (convert, _expand_cmd_args_to_texi),
	* tp/Texinfo/Convert/TexinfoXML.pm (_leading_spaces_before_argument):
	Access 'spaces_before_argument' as a string value.

2017-09-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_abort_empty_line): Change code to
	keep track of which element refers to space element in its
	'extra' hash.  No functional change intended.

2017-09-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_abort_empty_line): Change the name of a 
	variable.  Use a variable to simplify the code.

2017-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_abort_empty_line): Remove
	'empty_spaces_before_argument' element from main tree.
	(import): Temporarily disable XS overrides.
	(_parse_texi) <new line>: Remove an 
	'empty_spaces_before_argument' element.
	Otherwise it will not be removed in '_abort_empty_line' because 
	a 'new_line' element is in the way.
	Do not call '_abort_empty_line' for a continuation with @ inside
	a def command, as this leads to an 'empty_spaces_before_argument'
	element being removed when it was not before.
	(close_current) <bracketed>: Remove an 
	'empty_spaces_before_argument' element.  This happens for some 
	cases of malformed input.
